Bug 161643 - DOCX: missing import/export "Maximum consecutive hyphenated lines".
Summary: DOCX: missing import/export "Maximum consecutive hyphenated lines".
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on:
Blocks: DOCX Hyphenation
  Show dependency treegraph
 
Reported: 2024-06-18 21:48 UTC by László Németh
Modified: 2024-06-30 08:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document with consecutiveHyphenLimit = 1 (40.04 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-19 05:27 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-06-18 21:48:00 UTC
Description:
Value "Maximum consecutive hyphenated lines"  isn't imported DOCX file, and the associated ParaHyphenationMaxHyphens isn't exported to the OOXML document setting consecutiveHyphenLimit.

Steps to Reproduce:
1. Open the attached test document.

Actual Results:
"Maximum consecutive hyphenated lines" setting of the default paragraph style is still 0 (no limit). 

Expected Results:
"Maximum consecutive hyphenated lines" setting of the default paragraph style is 1 (no consecutive hyphenated lines).


Reproducible: Always


User Profile Reset: No

Additional Info:
Note: OpenDocument interoperability is possible here, false information on page 61 in Eckert et al.: Document Interoperability – Open Document Format and Office Open XML, Fraunhofer Verlag, 2009 (https://publica-rest.fraunhofer.de/server/api/core/bitstreams/dafae458-4197-4d5b-aa08-52708f54a916/content).
Comment 1 László Németh 2024-06-19 05:27:59 UTC
Created attachment 194811 [details]
test document with consecutiveHyphenLimit = 1
Comment 2 Commit Notification 2024-06-19 07:09:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64365dfa67d5a1d8fbc710238a4ea9c492645de4

tdf#161643 sw DOCX import/export of maximum consecutive hyphenated lines

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-21 10:49:40 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a7a57f408628fd6c87d5b3d20d3f1564d5eb15ae

tdf#161643 sw DOCX import/export of maximum consecutive hyphenated lines

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.