tdf#161643 sw DOCX import/export of maximum consecutive hyphenated lines

Fix line break interoperability by importing w:consecutiveHyphenLimit to
ParaHyphenationMaxHyphens, and exporting ParaHyphenationMacHyphens to
w:consecutiveHyphenLimit in OOXML import/export filters.

Change-Id: I5f40bcff34ebebeabc0de9898955abda4dc34cde
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169127
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 64365dfa67d5a1d8fbc710238a4ea9c492645de4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169131
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>